--- a/demo/index.html
+++ b/demo/index.html
@@ -6,7 +6,7 @@
     <title>ER-js Demo</title>
 </head>
 <body>
-<h1>ER-js Demo</h1>
+<h1>ER-JS Demo</h1>
 <div id="canvas"></div>
 <script type="module" src="js/demo.js"></script>
 </body>
